fix: align Visualizer stats to top of the page

--- a/client/src/app/routes/stardust/Visualizer.scss
+++ b/client/src/app/routes/stardust/Visualizer.scss
@@ -102,10 +102,46 @@
         text-align: right;
       }
       .card--label {
-          justify-content: flex-end;
+        justify-content: flex-end;
       }
       .card--content {
-          padding: 20px 30px;
+         padding: 20px 30px;
+      }
+    }
+
+    @include tablet-down {
+      top: 60px;
+      left: 20px;
+      bottom: auto;
+      justify-content: left;
+
+      .stats-panel {
+        .card--value,
+        .card--label {
+          text-align: left;
+        }
+        .card--label {
+          justify-content: flex-start;
+        }
+        .card--content {
+          padding: 0;
+        }
+        .stats-panel__info{
+          padding: 0 10px;
+          display: inline-block;
+        }
+      }
+    }
+
+    @include phone-down {
+      .stats-panel {
+        .card--value,
+        .card--label {
+          font-size: 12px;
+        }
+        .stats-panel__info:last-of-type{
+          display: block;
+        }
       }
     }
   }
